--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets//logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Benedykt Kajzerek</title>
+    <meta
+      name="description"
+      content="Welcome to my developer portfolio! Here, you can explore a variety of projects and web applications that highlight my skills in crafting dynamic and engaging user interfaces. My dedication to writing clean, efficient code and delivering innovative solutions drives me to create user experiences that are both highly functional and visually captivating."
+    />
+    <meta
+      name="keywords"
+      content="Benedykt Kajzerek, personal, portfolio, website, software, developer"
+    />
+    <meta name="application-name" content="Benedykt Kajzerek" />
+    <meta name="author" content="Benedykt Kajzerek" />
+    <meta property="og:tilte" content="Benedykt Kajzerek" />
+    <meta property="og:site_name" content="Benedykt Kajzerek" />
+    <meta
+      property="og:description"
+      content="Welcome to my developer portfolio! Here, you can explore a variety of projects and web applications that highlight my skills in crafting dynamic and engaging user interfaces. My dedication to writing clean, efficient code and delivering innovative solutions drives me to create user experiences that are both highly functional and visually captivating."
+    />
+    <meta
+      property="og:image"
+      content="https://benedyktkajzerek.com/opengraph-image.png"
+    />
+    <meta property="og:type" content="website" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
