--- a/index.html
+++ b/index.html
@@ -4,28 +4,56 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benedykt Kajzerek</title>
+    <title>Benedykt Kajzerek - Software Developer</title>
+
+    <!-- Google Search -->
     <meta
       name="description"
-      content="Welcome to my developer portfolio! Here, you can explore a variety of projects and web applications that highlight my skills in crafting dynamic and engaging user interfaces. My dedication to writing clean, efficient code and delivering innovative solutions drives me to create user experiences that are both highly functional and visually captivating."
+      content="I'm a software developer with strong focus on producing high-quality websites and web applications."
     />
     <meta
       name="keywords"
-      content="Benedykt Kajzerek, personal, portfolio, website, software, developer"
+      content="Benedykt Kajzerek, Kajzerek, personal, portfolio, website, software, developer, engineer"
     />
     <meta name="application-name" content="Benedykt Kajzerek" />
     <meta name="author" content="Benedykt Kajzerek" />
-    <meta property="og:tilte" content="Benedykt Kajzerek" />
-    <meta property="og:site_name" content="Benedykt Kajzerek" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Benedykt Kajzerek - Software Developer"
+    />
+    <meta
+      property="og:site_name"
+      content="Benedykt Kajzerek - Software Developer"
+    />
     <meta
       property="og:description"
-      content="Welcome to my developer portfolio! Here, you can explore a variety of projects and web applications that highlight my skills in crafting dynamic and engaging user interfaces. My dedication to writing clean, efficient code and delivering innovative solutions drives me to create user experiences that are both highly functional and visually captivating."
+      content="I'm a software developer with strong focus on producing high-quality websites and web applications."
     />
     <meta
       property="og:image"
-      content="https://benedyktkajzerek.com/opengraph-image.png"
+      content="https://benedyktkajzerek.com/assets/og-img.png"
     />
-    <meta property="og:type" content="website" />
+
+    <!-- Twitter/X Card  -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@benedykt_" />
+    <meta
+      name="twitter:title"
+      content="Benedykt Kajzerek - Software Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="I'm a software developer with strong focus on producing high-quality websites and web applications."
+    />
+    <meta
+      name="twitter:image"
+      content="https://benedyktkajzerek.com/assets/og-img.png"
+    />
+
+    <link rel="canonical" href="https://www.benedyktkajzerek.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
