speed insights, minor fixes

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benedykt Kajzerek - Software Developer</title>
-
     <!-- Google Search -->
     <meta
       name="description"
@@ -17,8 +16,9 @@
     />
     <meta name="application-name" content="Benedykt Kajzerek" />
     <meta name="author" content="Benedykt Kajzerek" />
-
+    <link rel="canonical" href="https://www.benedyktkajzerek.com" />
     <!-- Open Graph -->
+    <meta property="og:url" content="https://www.benedyktkajzerek.com" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -34,9 +34,8 @@
     />
     <meta
       property="og:image"
-      content="https://benedyktkajzerek.com/assets/og-img.png"
+      content="https://www.benedyktkajzerek.com/opengraph-img.png"
     />
-
     <!-- Twitter/X Card  -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@benedykt_" />
@@ -50,10 +49,9 @@
     />
     <meta
       name="twitter:image"
-      content="https://benedyktkajzerek.com/assets/og-img.png"
+      content="https://www.benedyktkajzerek.com/opengraph-img.png"
     />
-
-    <link rel="canonical" href="https://www.benedyktkajzerek.com/" />
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
